backup progress prism validator for midpilot-validator service